fix: make spinner more visible

--- a/globals.css
+++ b/globals.css
@@ -7,7 +7,7 @@
 }
 
 .spinner {
-    border: 4px solid rgba(0, 0, 0, 0.1); /* Light grey border */
+    border: 4px solid rgba(150, 150, 150, 1); /* Light grey border */
     width: 36px;
     height: 36px;
     border-radius: 50%;
